[package]
name = "ratcat"
version = "0.1.0"
edition = "2021"
authors = ["2KAbhishek <iam2kabhishek@email.com>"]
license = "GPL-3.0"
description = "A rusty cat clone"
readme = "README.md"
homepage = "https://github.com/2KAbhishek/rat"
repository = "https://github.com/2KAbhishek/rat"
keywords = ["cli", "pager", "cat"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["std"] }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
